# actu_emploi

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.agents/skills/agentic-architecture/: SKILL.md
.agents/skills/debug-playbook/: SKILL.md
.agents/skills/project-conventions/: SKILL.md
.agents/skills/render-runbook/: SKILL.md
app/: globals.css  layout.tsx  page.tsx  run-pipeline-controls.tsx  theme-toggle.tsx
app/agents/: evaluation-controls.tsx  page.tsx
app/api/feed/: route.ts
app/profile/: document-skill-editor.tsx  document-upload-form.tsx  manual-skill-form.tsx  page.tsx  purge-document-data-button.tsx
docs/: agentic-mvp.md  ai-workflow.md  backlog-mvp.md  cadrage-produit.md  spec-technique-v1.md
scripts/: dev-foreground.mjs  dev-server.mjs  llm-runtime.mjs  run-python-pipeline.mjs  runtime-tasks.mjs
scripts/python/: analyze_candidate_document_text.py  evaluate_agentic_relevance.py  extract_pdf_text.py  inspect_llm_runtime.py  refresh_agentic_matches.py  run_agentic_job_match.py  run_agentic_job_match_task.py  run_pipeline_task.py  run_sample_pipeline.py
src/config/: env.ts
src/db/: client.ts  mock-store.ts
src/domain/: scoring.ts  types.ts
tests/python/: test_agentic_match.py  test_agentic_orchestrator.py  test_candidate_document_analysis.py  test_document_quality.py  test_filters.py  test_france_travail_preferences.py  test_hardware.py  test_lightweight_llm.py  test_precomputed_matches.py  test_skill_extractor.py  test_storage.py
(+80 files in other folders)
